--- a/app/public/home.html
+++ b/app/public/home.html
@@ -9,17 +9,23 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <!--Google Font-->
+      <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
       <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+
+    <style>
+      <h1 style="color:blue;">This is a Blue Heading</h1>
+    </style>
   <title>Friend Finder</title>
 </head>
 <body>
   <div class='container'>
     <div class='card-panel yellow darken-1 col s12'>
       <section class='center-align'>
-      <h1><i class="medium material-icons">group_add</i>MatchBuddy</h1>
+      <h1 style="font-family: 'Bangers', cursive;">MatchBuddy<i class="medium material-icons">group_add</i></h1>
       <h4>Answer a few questions and meet your new best friend.</h4><br>
       <a href='/survey' class="waves-effect waves-light btn cyan lighten-1"><i class="material-icons left">comment</i>Take Survey</a>
       </section>
